trying pixiJS and ThreeJS togather

--- a/PixiDemo/GameSceneDemo/index.html
+++ b/PixiDemo/GameSceneDemo/index.html
@@ -135,6 +135,7 @@
             message.position.set(gameOverScene.width / 2, gameOverScene.height / 2);
             gameOverScene.addChild(message);
 
+            // Assigning player velocity according keys movements 
             let left = keyboard(37),
                 right = keyboard(39),
                 up = keyboard(38),
